--- a/CenaPlus.Client/Remote/Home.xaml
+++ b/CenaPlus.Client/Remote/Home.xaml
@@ -16,9 +16,9 @@
         <ScrollViewer Margin="{StaticResource SplitLeft}">
             <StackPanel>
                 <TextBlock Text="Profile" Style="{StaticResource Heading2}" />
-                <Image Height="100" Width="100" HorizontalAlignment="Left" Source="/CenaPlus.Client;component/Resources/DefaultAvatar.jpg"/>
+                <Image Margin="0,10,0,0" Height="100" Width="100" HorizontalAlignment="Left" Source="/CenaPlus.Client;component/Resources/DefaultAvatar.jpg"/>
                 <TextBlock Name="txtNickName" Text="Gasai Yuno" Width="100" HorizontalAlignment="Left" TextAlignment="Center"></TextBlock>
-                <TextBlock Name="txtName" Text="" Margin="0,10,0,0"></TextBlock>
+                <TextBlock Name="txtName" Text="" Margin="0,20,0,0"></TextBlock>
                 <TextBlock Name="txtID" Text=""></TextBlock>
                 <TextBlock Name="txtRole" Text=""></TextBlock>
             </StackPanel>
