--- a/CenaPlus.Server/Settings/About.xaml
+++ b/CenaPlus.Server/Settings/About.xaml
@@ -9,8 +9,8 @@
         <ScrollViewer>
             <StackPanel MinWidth="200">
                 <TextBlock Text="ABOUT" Style="{StaticResource Heading2}" />
-                <TextBlock Text="Developers: Gasai Yuno, Ibe Kaoet, Cuteli, Zaxs, Tangjz, Yaya" Margin="0,0,0,8" TextWrapping="Wrap" />
-                <TextBlock Text="Version: 0.9.4b" Margin="0,0,0,8" TextWrapping="Wrap" />
+                <TextBlock Text="Developers: Gasai Yuno, Ibe Kaoet, Yaya" Margin="0,0,0,8" TextWrapping="Wrap" />
+                <TextBlock Text="Version: 0.9.5b" Margin="0,0,0,8" TextWrapping="Wrap" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
