--- a/CenaPlus.Client/Settings/About.xaml
+++ b/CenaPlus.Client/Settings/About.xaml
@@ -10,7 +10,7 @@
             <StackPanel MinWidth="200">
                 <TextBlock Text="ABOUT" Style="{StaticResource Heading2}" />
                 <TextBlock Text="Developers: Gasai Yuno, Ibe Kaoet, Yaya" Margin="0,0,0,8" TextWrapping="Wrap" />
-                <TextBlock Text="Version: 0.9.5b" Margin="0,0,0,8" TextWrapping="Wrap" />
+                <TextBlock Text="Version: 1.0.0" Margin="0,0,0,8" TextWrapping="Wrap" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
